<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:id="@+id/ask_a_question"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="12dp"
        android:fontFamily="@font/roboto"
        android:text="@string/question"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_question"
        android:layout_width="0dp"
        android:layout_height="91dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/rounded_corners_text"
        android:fontFamily="@font/roboto"
        android:paddingStart="10dp"
        android:shadowRadius="10"
        android:text="@string/title"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.636"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ask_a_question" />

    <EditText
        android:id="@+id/question_text"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:hint="@string/question_hint"
        android:inputType="text"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/title_question"
        app:layout_constraintEnd_toEndOf="@+id/title_question"
        app:layout_constraintStart_toStartOf="@+id/title_question"
        app:layout_constraintTop_toTopOf="@+id/title_question" />

        <TextView
            android:id="@+id/body"
            android:layout_width="0dp"
            android:layout_height="190dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/rounded_corners_text"
            android:fontFamily="@font/roboto"
            android:paddingStart="10sp"
            android:text="@string/body"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_question" />

        <TextView
            android:id="@+id/body_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:justificationMode="inter_word"
            android:paddingStart="10sp"
            android:paddingEnd="10sp"
            android:text="@string/body_text"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/body"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/body"
            app:layout_constraintTop_toTopOf="@+id/body" />

        <EditText
            android:id="@+id/question_text2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:hint="@string/body_hint"
            android:inputType="textPersonName"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/body"
            app:layout_constraintStart_toStartOf="@+id/body"
            app:layout_constraintTop_toBottomOf="@+id/body_text" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_rounded_cancel"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/submit"
            app:layout_constraintTop_toBottomOf="@+id/body"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/submit"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_marginStart="160dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_rounded"
            android:text="@string/submit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/body"
            app:layout_constraintVertical_bias="1.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>